--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,13 @@ Type: Package
 Title: Code for WB psychometrics project
 Version: 0.1.0
 Author: Peter Halpin and Kyle Nickodem
-Maintainer: Kyle Nickodem <yourself@somewhere.net>
+Maintainer: Kyle Nickodem <kyle.nickodem@gmail.com>
 Description: This project collects some functions to detect DIF and check for robustness of treatment effects.  
+Depends: flextable,
+         ggplot2,
+		 knitr,
+         mirt,
+		 rmarkdown
 License: GNU GENERAL PUBLIC LICENSE
 Encoding: UTF-8
 LazyData: true
