let them cluster
implemented adjusting smd and its standard error estimate for cluster membership (#35 part 2)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Description: This package contains functions to detect DIF and check for robustn
 Depends: flextable,
          ggplot2,
 		 knitr,
+		 lme4,
          mirt,
 		 rmarkdown
 License: GNU GENERAL PUBLIC LICENSE
