--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ exportPattern("^[[:alpha:]]+")
 import(flextable)
 import(ggplot2)
 import(knitr)
-import(lme4)
 import(mirt)
 import(rmarkdown)
+importFrom(lme4, lmer)
+importFrom(lme4, VarCorr)
