--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,24 @@
 exportPattern("^[[:alpha:]]+")
-import(flextable)
 import(ggplot2)
-import(knitr)
 import(mirt)
 import(rmarkdown)
+importFrom(flextable, autofit)
+importFrom(flextable, bold)
+importFrom(flextable, colformat_num)
+importFrom(flextable, flextable)
+importFrom(gridExtra, grid.arrange)
+importFrom(knitr, opts_chunk)
+importFrom(knitr, knit)
+importFrom(knitr, knit_print)
 importFrom(lme4, lmer)
 importFrom(lme4, VarCorr)
+importFrom(mirt, coef)
+importFrom(mirt, DIF)
+importFrom(mirt, fscores)
+importFrom(mirt, multipleGroup)
+importFrom(stats, anova)
+importFrom(stats, glm)
+importFrom(stats, mantelhaen.test)
+importFrom(stats, p.adjust)
+importFrom(stats, quantile)
+
