--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ import(mirt)
 import(rmarkdown)
 importFrom(flextable, autofit)
 importFrom(flextable, bold)
-importFrom(flextable, colformat_num)
+importFrom(flextable, colformat_double)
 importFrom(flextable, flextable)
 importFrom(gridExtra, grid.arrange)
 importFrom(knitr, opts_chunk)
