--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,7 @@ Version: 0.1.0
 Author: Peter Halpin and Kyle Nickodem
 Maintainer: Kyle Nickodem <kyle.nickodem@gmail.com>
 Description:
-    This package contains functions to detect differential item functioning (DIF),
-	check for robustness of treatment effects in the presence of DIF, and
-	produce reports summarizing the results.
+   This package provides methods for (a) evaluating differential item functioning (DIF),  (b) checking whether DIF leads to biased treatment effects on the unit-weighted total score or IRT-based scoring methods, and (c) providing DIF-corrected treatment effects by either removing biased items (for the unit-weighted total score) or using an IRT models that adjusts for the item bias (for IRT-based scoring).
 Depends:
     R (>= 3.6)
 Imports:
