--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ importFrom(flextable, autofit)
 importFrom(flextable, bold)
 importFrom(flextable, colformat_double)
 importFrom(flextable, flextable)
+importFrom(flextable, set_flextable_defaults)
 importFrom(gridExtra, grid.arrange)
 importFrom(knitr, opts_chunk)
 importFrom(knitr, knit)
