dif_models and docs
removing dif.data argument from dif_models (#48) and updating variety of documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: WBdif
 Type: Package
 Title: Investigating DIF in World Bank early childhood development measures
 Version: 0.1.0
-Author: Peter Halpin and Kyle Nickodem
+Author: Kyle Nickodem and Peter Halpin
 Maintainer: Kyle Nickodem <kyle.nickodem@gmail.com>
 Description:
    This package provides methods for (a) evaluating differential item functioning (DIF),  (b) checking whether DIF leads to biased treatment effects on the unit-weighted total score or IRT-based scoring methods, and (c) providing DIF-corrected treatment effects by either removing biased items (for the unit-weighted total score) or using an IRT models that adjusts for the item bias (for IRT-based scoring).
