--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,17 @@ export(effects_table)
 export(extract_biased_items)
 export(hedges2007)
 export(summary_report)
+import(ggplot2)
+import(mirt)
+import(rmarkdown)
+importFrom(flextable,autofit)
+importFrom(flextable,bold)
+importFrom(flextable,colformat_double)
+importFrom(flextable,flextable)
+importFrom(flextable,set_flextable_defaults)
+importFrom(gridExtra,grid.arrange)
+importFrom(knitr,knit)
+importFrom(knitr,knit_print)
+importFrom(knitr,opts_chunk)
+importFrom(lme4,VarCorr)
+importFrom(lme4,lmer)
