--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,13 @@
 export(bias_plots)
 export(biased_items_table)
 export(dif_analysis)
-export(dif_data_prep)
 export(dif_effect_report)
 export(dif_irt)
 export(dif_loess)
 export(dif_logistic)
 export(dif_mh)
 export(dif_models)
+export(dif_prep)
 export(dif_report)
 export(effect_report)
 export(effect_robustness)
